--- a/view/frontend/layout/catalog_widget_product_list.xml
+++ b/view/frontend/layout/catalog_widget_product_list.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
+        <attribute name="class" value="has-swatch-table-module" />
+
         <!-- Replace template with ours -->
         <referenceBlock name="category.product.type.details.renderers.configurable" template="Groomershop_SwatchTable::product/listing/renderer.phtml" />
     </body>
